# HeartBeatz

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HeartBeatz_Work_Packages_AZ_Oostende.docx  QUICKSTART.md  README.md  TASKBOARD.md  docker-compose.override.yml  docker-compose.yml  heartbeatz-architecture.html  heartbeatz-boot-flow.html  index.html  package.json  pose-fusion.html  server.js  state.json
.swarm/: schema.sql  state.json
cadquery/: button_box.py  main_box_assembly.step  main_box_base.step  main_box_enclosure.py  main_box_lid.step  ref_battery_ugreen.step  ref_esp32_s3.step  ref_mele_n100.step  ref_router_mt3000.step  sensor_node_assembly.step  sensor_node_base.step  sensor_node_enclosure.py  sensor_node_lid.step  sensor_node_v2_enclosure.py  sma_antenna_holder.py
docs/: esp32c3-c6-setup.md  user-guide.md
examples/: README.md
firmware/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults
firmware/esp32-csi-node/main/: CMakeLists.txt  Kconfig.projbuild  csi_collector.c  display_task.c  display_ui.c  edge_processing.c  edge_processing.h  idf_component.yml  led_indicator.c  led_indicator.h  main.c  mmwave_sensor.c  nvs_config.c  nvs_config.h  swarm_bridge.c  wasm_runtime.c
firmware/main/: CMakeLists.txt  led_status.c  led_status.h  led_strip_encoder.c  led_strip_encoder.h  main.c  node_id.c  node_id.h  nvs_config.c  nvs_config.h  radar_ld2410s.c  radar_ld2410s.h  udp_sender.c  udp_sender.h  wifi_csi.c  wifi_csi.h
scripts/: build-mac-wifi.sh  macos_wifi_bridge.py  qemu_swarm.py  swarm_health.py  validate_qemu_output.py
(+183 files in other folders)
